[package]
name = "lesss"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
pest = "2.5.6"
pest_consume = "1.1.3"
pest_derive = "2.5.6"

[dev-dependencies]
indoc = "2.0.1"
